Fix existing tests